--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
           <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 " id="">
 
             <h1 class="bold my-2 margin-top-h1 ">About Bloomli.</h1>
-            <h5 class=" my-4 color-grey bg-primary text-light">Where NonFiction, growth and convenience live.
+   <h5 class=" my-4 title-about-page-grey ">Where NonFiction, growth and convenience live.
             </h5>
             <p class="color-grey">Bloomli is <span class="text-dark bold" >MORE</span> than just a content provider - Its a growth partner.
 
