Update and rename index.html.html to index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="html 5 template">
     <meta name="author" content="">
-    <title>Find Houses - HTML5 Template</title>
+    <title>www.niceestatemarketing.com</title>
     <!-- FAVICON -->
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="css/jquery-ui.css">
