--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                                         <span class="rent">Rent And Sale</span>
                                     </div>
                                     <div class="listing-img-content">
-                                        <span class="listing-compact-title">Residenial plot <i>Gadap</i></span>
+                                        <span class="listing-compact-title">Residential plot <i>Gadap</i></span>
                                         <ul class="listing-hidden-content">
                                            <li>Acre <span>1-4</span></li>
                                             <li>yards<span>1000</span></li>
